--- a/public/font/style.css
+++ b/public/font/style.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'Circular Std';
-    src: local('Circular Std Book'), local('Circular-Std-Book'),
-        url('CircularStd-Book.woff2') format('woff2'),
-        url('CircularStd-Book.woff') format('woff'),
-        url('CircularStd-Book.ttf') format('truetype');
-    font-weight: normal;
+    src: local('Circular Std Medium'), local('Circular-Std-Medium'),
+        url('CircularStd-Medium.woff2') format('woff2'),
+        url('CircularStd-Medium.woff') format('woff'),
+        url('CircularStd-Medium.ttf') format('truetype');
+    font-weight: 500;
     font-style: normal;
   }
