--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -16,4 +16,5 @@ body {
     font-size: $font-size-paragraph1;
     color: $color-black;
     // font-family: 'Circular Std';
+    // font-family: 'Circular Std Book';
 }
