--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
+    // padding-top: 2rem;
+    // padding-bottom: 2rem;
     background-color: rgba($color-gray, .1);
 }
 
