edit component form name to FormSignUp

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -30,5 +30,5 @@
 @import '../components/Feedback/feedback';
 @import '../components/AppDownload/appdownload';
 @import '../components/CTA/cta';
-@import '../components/Form/form';
+@import '../components/FormSignUp/formSignUp';
 
