UI form singup with email

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,7 @@
 @import '../components/Header/components/HeaderCategoryItem/headerCategoryItem';
 @import '../components/Header/components/HeaderBurgerMenu/headerBurgerMenu';
 @import '../components/Value/components/FeatureItem/valueItem';
+@import '../components/FormSignUpWithEmail/formSignUpWithEmail';
 
 @import '../components/CustomInput/customInput';
 @import '../components/ButtonLarge/buttonLarge';
