--- a/src/components/FormSignUp/_formSignUp.scss
+++ b/src/components/FormSignUp/_formSignUp.scss
@@ -17,19 +17,19 @@
         margin-bottom: 2rem;
     }
 
-    &__checkbox-disflex{
+    &__checkbox-disflex {
         display: flex;
     }
     &__checkbox {
         height: 18px;
-    width: 18px;
+        width: 18px;
         position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: #fff;
         border-radius: 4px;
-        border: 1px solid #B3BBC1;
+        border: 1px solid #b3bbc1;
         margin-right: 10px;
     }
 
@@ -47,8 +47,8 @@
         padding: 0;
         font-variant: tabular-nums;
         list-style: none;
-        -webkit-font-feature-settings: 'tnum';
-        font-feature-settings: 'tnum', "tnum";
+        -webkit-font-feature-settings: "tnum";
+        font-feature-settings: "tnum", "tnum";
         position: relative;
         display: inline-block;
         width: 30rem;
@@ -64,6 +64,30 @@
         -webkit-transition: all 0.3s;
         transition: all 0.3s;
     }
+
+    .custom-input {
+        position: relative;
+        display: flex;
+        margin-bottom: 10px;
+        margin-top: 20px;
+        &__placeholder {
+            position: absolute;
+            top: -10px;
+            left: 10px;
+            // background-color: red;
+            background-color: $color-white;
+            padding: 0 10px;
+            z-index: 900;
+            color: $color-primary-dark;
+            font-size: $font-size-subtitle1;
+            font-weight: 400;
+        }
+        input {
+            // margin-top: 50px;
+            // height: 60px;
+            padding-top: 15px !important;
+        }
+    }
 }
 
 .form___checkbox-disflex {
@@ -71,10 +95,8 @@
     text-align: center;
 }
 
-
 @media (max-width: 750px) {
     .form {
         padding: 1rem 2rem;
     }
-
 }
