--- a/src/components/Feedback/_feedback.scss
+++ b/src/components/Feedback/_feedback.scss
@@ -6,8 +6,7 @@
         rgba(0, 147, 233, 1) 87%,
         rgba(128, 208, 199, 1) 100%
     );
-    // margin-bottom: 15rem;
-    height: 350px;
+    height: 35rem;
     position: relative;
     .ant-carousel {
         width: 80%;
@@ -17,18 +16,12 @@
         transform: translate(-50%, -50%);
     }
     &__carousel {
-        padding-bottom: 50px;
+        padding-bottom: 5rem;
     }
 }
 
 @media (max-width: 700px) {
     .feedback {
-        height: 500px;
-    }
-}
-
-@media (max-width: 407px) {
-    .feedback {
-        height: 600px;
+        height: 50rem;
     }
 }
