--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -9,6 +9,9 @@ html {
   /* => 1rem = 10px*/
   font-size: 62.5%;
   scroll-behavior: smooth;
+  @media(max-width: 750px) {
+    font-size: 50%;
+  }
 }
 
 body {
