--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -36,8 +36,8 @@ $box-shadow: 0px 6px 20px rgba($color-black, .05);
 $boder-radious: 50px;
 $boder-radious-btn: 5px;
 
-$height-btn-small: 45px;
-$height-btn-large: 60px;
+$height-btn-small: 4.5rem;
+$height-btn-large: 6rem;
 
 $header-height: 4rem;
 
