--- a/src/components/CustomInput/_customInput.scss
+++ b/src/components/CustomInput/_customInput.scss
@@ -3,6 +3,10 @@
     display: flex;
     margin-bottom: 10px;
     margin-top: 20px;
+    background-color: #fafafa;
+    &:focus {
+        background-color: #E4E4FF;
+    }
     &__placeholder {
         position: absolute;
         top: -10px;
