--- a/src/components/ButtonLarge/_buttonLarge.scss
+++ b/src/components/ButtonLarge/_buttonLarge.scss
@@ -6,7 +6,7 @@
     height: $height-btn-large;
     width: 195px;
     font-size: $font-size-heading5;
-    margin-top: 3rem;
+    // margin-top: 3rem;
     transition: all 0.2s;
     border: none;
 
