--- a/src/components/FormSignUp/_formSignUp.scss
+++ b/src/components/FormSignUp/_formSignUp.scss
@@ -40,6 +40,10 @@
         border: 1px solid #b3bbc1;
     }
 
+    .ant-form-item {
+        margin-top: 35px;
+    }
+
     .ant-input {
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
@@ -69,7 +73,7 @@
         position: relative;
         display: flex;
         margin-bottom: 10px;
-        margin-top: 20px;
+        // margin-top: 20px;
         &__placeholder {
             position: absolute;
             top: -10px;
@@ -86,6 +90,19 @@
             // margin-top: 50px;
             // height: 60px;
             padding-top: 15px !important;
+        }
+    }
+    .check-box {
+        margin-top: 20px;
+        .ant-checkbox-wrapper {
+            display: flex;
+            justify-content: flex-start;
+            .ant-checkbox {
+                margin-top: 5px;
+                outline: none !important;
+                border: none !important;
+                height: fit-content;
+            }
         }
     }
 }
