Edit Some Stuff

--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -36,9 +36,11 @@
 
     &__text-color {
         color: $color-white;
+        cursor: default;
     }
     .description {
         font-size: $font-size-heading5;
+        cursor: default;
 
     }
     p{
