Edit Some Stuff

--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -17,6 +17,7 @@
         font-size: $font-size-heading1;
         color: $color-black;
         margin-bottom: 0;;
+        cursor: default;
     }
 }
 
