--- a/src/components/Description/_description.scss
+++ b/src/components/Description/_description.scss
@@ -15,6 +15,7 @@
     &__content-padding {
         padding: 5rem 10rem 0 0;
         font-size: $font-size-heading6;
+        cursor: default;
     }
 
     &__img {
