--- a/src/components/Feature/_feature.scss
+++ b/src/components/Feature/_feature.scss
@@ -21,9 +21,11 @@
 
     &__content-padding {
         padding: 10rem 10rem 0 0;
+        cursor: default;
     }
     &__content-padding-left {
         padding: 10rem 0 0 10rem;
+        cursor: default;
     }
 
     &__img {
