--- a/src/components/Feedback/_feedback.scss
+++ b/src/components/Feedback/_feedback.scss
@@ -8,6 +8,7 @@
     );
     height: 35rem;
     position: relative;
+    cursor: default;
     .ant-carousel {
         width: 80%;
         position: absolute;
