--- a/src/components/AppDownload/_appdownload.scss
+++ b/src/components/AppDownload/_appdownload.scss
@@ -17,6 +17,7 @@
             h2 {
                 font-size: $font-size-heading1;
                 color: $color-black;
+                cursor: default;
             }
             &__download {
                 .app-store {
