--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -3,6 +3,15 @@
     // padding-top: 2rem;
     // padding-bottom: 2rem;
     background-color: rgba($color-gray, .1);
+    &__bottom {
+        .copyright {
+            cursor: default;
+        }
+    }
+}
+
+.footer-column__title {
+    cursor: default;
 }
 
 @media only screen and (max-width: 579px) {
