--- a/src/components/Heading/_heading.scss
+++ b/src/components/Heading/_heading.scss
@@ -1,5 +1,6 @@
 .heading-component {
     font-weight: bold;
     font-size: $font-size-heading2;
-    color: $color-black;    
+    color: $color-black;
+    cursor: default; 
 }
