edit UI from signup

--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -22,6 +22,7 @@
 
 @media (max-width: 750px) {
     .cta {
+        margin-top: 13rem;
         flex-direction: column-reverse;
         &__wrap {
             order: 1;
