--- a/src/components/AppDownload/_appdownload.scss
+++ b/src/components/AppDownload/_appdownload.scss
@@ -1,6 +1,6 @@
 .app-download {
     width: 100%;
-    margin: 0;
+    // margin: 0;
     // margin-bottom: 15rem;
     &__row {
         width: 100%;
