--- a/src/components/FormSignUp/_formSignUp.scss
+++ b/src/components/FormSignUp/_formSignUp.scss
@@ -7,6 +7,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    .ant-form {
+            display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
     &__btn-format {
         text-align: center;
         padding-bottom: 2rem;
@@ -41,7 +46,8 @@
     }
 
     .ant-form-item {
-        margin-top: 35px;
+        margin-top: 3.5rem;
+        width: fit-content;
     }
 
     .ant-input {
