--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -19,5 +19,5 @@ body {
     font-size: $font-size-paragraph1;
     color: $color-black;
     font-family: 'Circular Std';
-    // word-spacing: -6px;
+    word-spacing: -5px;
 }
