--- a/src/components/Header/components/HeaderCategory/_headerCategory.scss
+++ b/src/components/Header/components/HeaderCategory/_headerCategory.scss
@@ -9,21 +9,25 @@
         position: relative;
         margin-right: 24px;
         margin-bottom: 0;
+        padding: 2px 5px;
+        border-bottom: 2px solid rgba($color-primary-light, 0);
+        &.active {
+            border-bottom: 2px solid rgba($color-primary-light, 0.9);
+        }
         &:last-child {
             margin-right: 0;
         }
-       &:not(:last-child) {
-           &::after  {
-               content: "";
-               position: absolute;
-               width: 1px;
-               height: 20px;
-               background-color: rgba($color-primary-dark, .3);
-               top: 50%;
-               right: -12px;
-               transform: translateY(-50%);
-
-           }
+        &:not(:last-child) {
+            &::after {
+                content: "";
+                position: absolute;
+                width: 1px;
+                height: 20px;
+                background-color: rgba($color-primary-dark, 0.3);
+                top: 50%;
+                right: -12px;
+                transform: translateY(-50%);
+            }
         }
     }
 }
