--- a/src/components/Header/components/HeaderCategory/_headerCategory.scss
+++ b/src/components/Header/components/HeaderCategory/_headerCategory.scss
@@ -12,6 +12,7 @@
         margin-bottom: 0;
         padding: 2px 5px;
         border-bottom: 2px solid rgba($color-primary-dark, 0);
+        // transition: all .5s;
         &.active {
             border-bottom: 2px solid rgba($color-primary-dark, 0.9);
         }
