fix bug show active class header

--- a/src/components/Header/components/HeaderCategory/_headerCategory.scss
+++ b/src/components/Header/components/HeaderCategory/_headerCategory.scss
@@ -31,5 +31,8 @@
                 transform: translateY(-50%);
             }
         }
+        &--hidden {
+            display: none;
+        }
     }
 }
