--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -20,17 +20,18 @@
     }
     h1{
         font-size: $font-size-heading1;
-        margin: 0;
+        margin: 0 auto 10px 0px;
         display: table-header-group;
     }
 
     &__center{
+        width: 65%;
         text-align: center;
         margin: auto;
-        padding: 1rem;
+        padding: 1rem 8rem;
             display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
     flex-direction: column;
     }
 
