--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -18,6 +18,6 @@ body {
     box-sizing: border-box;
     font-size: $font-size-paragraph1;
     color: $color-black;
-    font-family: 'Circular Std';
-    word-spacing: -5px;
+    // font-family: 'Circular Std';
+    // word-spacing: -5px;
 }
