--- a/src/components/ButtonLarge/_buttonLarge.scss
+++ b/src/components/ButtonLarge/_buttonLarge.scss
@@ -4,7 +4,7 @@
     font-weight: bold;
     border-radius: $boder-radious-btn;
     height: $height-btn-large;
-    width: 195px;
+    // width: 195px;
     font-size: $font-size-heading5;
     // margin-top: 3rem;
     transition: all 0.2s;
