--- a/src/components/Header/components/HeaderBurgerMenu/_headerBurgerMenu.scss
+++ b/src/components/Header/components/HeaderBurgerMenu/_headerBurgerMenu.scss
@@ -3,6 +3,7 @@
     width: 100%;
     padding: 0.2rem 4rem;
     overflow: hidden;
+    height: $header-height;
     &__top {
         display: flex;
         justify-content: space-between;
