--- a/src/components/Description/_description.scss
+++ b/src/components/Description/_description.scss
@@ -6,13 +6,12 @@
     h2 {
         font-size: $font-size-heading2;
         color: $color-black;
-    }
-
-    p {
-        color: $color-gray;
+        font-weight: bold;
+        
     }
 
     &__content-padding {
+        color: $color-gray;
         padding: 5rem 10rem 0 0;
         font-size: $font-size-heading6;
         cursor: default;
@@ -31,8 +30,6 @@
 
 @media (max-width: 1240px) {
     .description {
-        // padding: 0 $padding-container-md;
-
         &__content-padding {
             padding: 5rem 5rem 0 0;
         }
@@ -41,8 +38,6 @@
 
 @media (max-width: 1050px) {
     .description {
-        // padding: 0 $padding-container-sm;
-
         &__content-padding {
             padding: 5rem 3rem 0 0;
         }
@@ -51,13 +46,9 @@
 
 @media(max-width: 670px) {
     .description {
-        h2 {
-            font-size: $font-size-heading3;
-        }
-
-        p {
-            font-size: $font-size-paragraph1;
-        }
+        // h2 {
+        //     font-size: $font-size-heading3;
+        // }
     }
 }
 
@@ -65,14 +56,14 @@
     .description {
         flex-direction: column;
 
-        h2 {
-            font-size: $font-size-heading4;
-        }
+        // h2 {
+        //     font-size: $font-size-heading4;
+        // }
 
-        p {
-            font-size: $font-size-paragraph2;
-            padding: 0;
-        }
+        // p {
+        //     font-size: $font-size-paragraph2;
+        //     padding: 0;
+        // }
 
         .col-6 {
             width: 80vw;
