--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-    background-color: $color-primary-dark;
+    background-color: #E9F8FF;
     display: flex;
     justify-content: space-between;
     margin: auto;
@@ -27,7 +27,7 @@
     }
 
     &__text-color {
-        color: $color-white;
+        color: #1A5296;
         font-size: $font-size-heading1;
         text-align: left;
         // margin: 0 auto 10px 0px;
@@ -97,7 +97,7 @@
             img {
                 width: 100%;
                 height: 30%;
-                max-height: 30rem;
+                // max-height: 30rem;
                 background-repeat: no-repeat;
                 object-fit: cover;
             }
