--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,66 +1,76 @@
-.login__wrap {
+@import "../../sass/index.scss";
+
+.login-wrap {
     min-height: 100vh;
     position: relative;
-    background-color: #109ae55c;
-}
-
-.login__wrap {
+    // background-color: #109ae55c;
+    // background-image: linear-gradient(174deg, #fff 80%, rgba($color-primary-light, .8),  rgba($color-primary-dark, .8));
+    background-image: linear-gradient(187deg, rgba($color-primary-dark, .5), rgba($color-primary-light, .5),  #fff 20%,#fff 80%, rgba($color-primary-light, .5),  rgba($color-primary-dark, .5));
     padding-top: 30px;
     padding-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    .back-to-home {
+        display: flex;
+        align-items: center;
+        padding: 0 3rem;
+        .icon-back {
+            display: flex;
+            align-items: center;
+            margin-right: 1rem;
+            span {
+                font-size: 2.8rem;
+                font-weight: bold;
+            }
+        }
+    }
+    .card-container {
+        background: rgb(0, 147, 233);
+        background: linear-gradient(124deg, rgba(0, 147, 233, 1) 0%, rgba(128, 208, 199, 1) 100%);
+        border-radius: 5px;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+        color: #fff;
+        padding-top: 30px;
+        padding-bottom: 20px;
+        position: relative;
+        width: 500px;
+        max-width: 100%;
+        text-align: center;
+        /* margin-top: 42px;
+        margin-bottom: 42px; */
+        margin: auto;
+    }
+    .login-avatar {
+        border: 1px solid #03bfcb;
+        border-radius: 50%;
+        padding: 7px;
+        width: 150px;
+        height: 150px;
+    }
+    .content-form {
+        padding: 2rem 3rem;
+    }
+    .form-item-custom {
+        input {
+            height: $height-btn-large;
+        }
+        .ant-input-password {
+            input {
+                height: 5rem;
+            }
+        }
+    }
+    .ant-form-item-control-input {
+        input,
+        .ant-input-affix-wrapper {
+            border-radius: $boder-radious-btn;
+            font-size: $font-size-paragraph1;
+        }
+    }
+    // error message
+    .ant-form-item-explain {
+        text-align: left;
+        margin: 0.5rem 0;
+    }
 }
-
-.login__card.card-container {
-    background: rgb(0, 147, 233);
-    background: linear-gradient(
-        124deg,
-        rgba(0, 147, 233, 1) 0%,
-        rgba(128, 208, 199, 1) 100%
-    );
-    border-radius: 5px;
-    box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
-    color: #fff;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    position: relative;
-    width: 500px;
-    max-width: 100%;
-    text-align: center;
-    /* margin-top: 42px;
-    margin-bottom: 42px; */
-    margin: auto;
-}
-
-.login__card.card-container .login__type.login__pro {
-    color: #231e39;
-    background-color: #febb0b;
-    border-radius: 3px;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 3px 7px;
-    position: absolute;
-    top: 30px;
-    left: 30px;
-}
-
-.login__card.card-container .login__avatar {
-    border: 1px solid #03bfcb;
-    border-radius: 50%;
-    padding: 7px;
-    width: 150px;
-    height: 150px;
-}
-
-.login__card .form-group {
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-    width: 80%;
-    margin: auto;
-    margin-bottom: 20px;
-    text-align: left;
-}
-
-.login__card .form-group label {
-    margin-bottom: 0;
-}
-
