--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,6 +16,8 @@
 @import '../components/Header/components/HeaderBurgerMenu/headerBurgerMenu';
 @import '../components/Value/components/FeatureItem/valueItem';
 @import '../components/FormSignUpWithEmail/formSignUpWithEmail';
+@import '../components/Login/login';
+@import '../components/Register/register';
 @import '../components/AuthWithGoogle/authWithGoogle';
 
 @import '../components/CustomInput/customInput';
