--- a/src/components/ButtonCustom/_buttonCustom.scss
+++ b/src/components/ButtonCustom/_buttonCustom.scss
@@ -7,13 +7,27 @@
     &.large {
         height: $height-btn-large !important;
         font-size: $font-size-heading5 !important;
+    }
 
+    // type
+    &.success {
+        background-color: $color-success;
+        border: none;
+        color: $color-white;
+        &:hover {
+            background-color: $color-warning !important;
+            color: $color-black;
+        }
+        &:visited,
+        &:focus {
+            background-color: $color-success;
+        }
     }
     &.ant-btn-primary {
         background-color: $color-primary-dark !important;
         font-size: $font-size-paragraph1;
     }
-    &.ant-btn-default { 
+    &.ant-btn-default {
         color: $color-primary-dark;
         border-color: $color-primary-dark;
     }
