--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -1,4 +1,3 @@
-@import "../../sass/index.scss";
 
 .login-wrap {
     min-height: 100vh;
@@ -41,9 +40,9 @@
         margin-bottom: 42px; */
         margin: auto;
         .title-form {
-            font-size: $font-size-heading1;
+            font-size: $font-size-heading2;
             letter-spacing: 4px;
-            margin-bottom: 3rem;
+            // margin-bottom: 3rem;
         }
     }
     .login-avatar {
@@ -57,23 +56,31 @@
         color: $color-primary-dark;
         a {
             color: $color-white;
-            // &:hover {
-                // color: rgba($color-gray, 1);
-            // }
         }
     }
     .content-form {
-        padding: 2rem 3rem;
+        padding: 2rem 3rem 0;
     }
     .form-item-custom {
-        input {
-            height: $height-btn-large;
-        }
-        .ant-input-password {
+        .ant-form-item-control-input {
+                height: $height-btn-small!important;
+                .ant-input-affix-wrapper {
+                    display: flex;
+                    align-items: center;
+                }
+
             input {
-                height: 5rem;
+                height: $height-btn-small!important;
             }
+
         }
+        // span {
+        // }
+        // .ant-input-password {
+        //      span {
+        //         height: $height-btn-small !important;
+        //     }
+        // }
     }
     .ant-form-item-control-input {
         input,
