--- a/src/components/Login/_login.scss
+++ b/src/components/Login/_login.scss
@@ -33,7 +33,7 @@
         padding-top: 30px;
         padding-bottom: 20px;
         position: relative;
-        width: 500px;
+        width: 50rem;
         max-width: 100%;
         text-align: center;
         /* margin-top: 42px;
