--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -5,6 +5,7 @@
     margin: auto;
     margin-top: $header-height;
     min-height: fit-content;
+    padding-bottom: .8rem;
     &__img {
         position: relative;
         img {
@@ -12,6 +13,10 @@
             height: 100%;
             background-repeat: no-repeat;
             object-fit: cover;
+        }
+        video {
+            width: 100%;
+            // height: 100%;
         }
     }
 
