--- a/src/components/Header/components/Logo/Logo.scss
+++ b/src/components/Header/components/Logo/Logo.scss
@@ -1,3 +1,5 @@
+@import '../../../../sass/index.scss';
+
 .logo {
     font-size: $font-size-heading3;
      background-image: linear-gradient(to right,  $color-primary-dark, $color-primary-light);
