--- a/src/components/Topic/Topic.scss
+++ b/src/components/Topic/Topic.scss
@@ -9,10 +9,10 @@
     }
 }
 
-@media only screen and (max-width: 579px) {
-    .topic  {
-      &__heading {
-        padding-left: 2rem;
-      }
-    }
-}
+// @media only screen and (max-width: 579px) {
+//     .topic  {
+//       &__heading {
+//         // padding-left: 2rem;
+//       }
+//     }
+// }
