--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -82,6 +82,7 @@
 
             justify-content: center;
             align-items: center;
+            padding-left: 0;
         }
         &__text-color {
             font-size: 3.6rem;
