--- a/src/components/Feature/FeatureItem/FeatureItem.scss
+++ b/src/components/Feature/FeatureItem/FeatureItem.scss
@@ -3,6 +3,7 @@
 .feature-item {
     margin-bottom: 3rem;
     padding: 1rem;
+    text-align: center;
     .img {
         width: 100%;
         img {
@@ -11,7 +12,7 @@
         }
     }
     .description {
-        text-align: center;
         font-size: $font-size-heading5;
+        display: unset;
     }
 }
