--- a/src/components/Topic/Topic.scss
+++ b/src/components/Topic/Topic.scss
@@ -2,10 +2,13 @@
 
 .topic {
     margin-top: 8rem;
-    margin-bottom: 8rem;
+    margin-bottom: 4rem;
     &__item {
         padding: 1rem;
         cursor: pointer;
+    }
+    .ant-row {
+       margin-top: 8rem; 
     }
 }
 
