--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,25 +1,26 @@
-@import '../../sass/index.scss';
+@import "../../sass/index.scss";
 
 .footer {
-    padding: 2rem 0;
-    // padding-top: 2rem;
-    // padding-bottom: 2rem;
-    background-color: rgba($color-gray, .1);
-    &__bottom {
-        .copyright {
-            cursor: default;
-        }
+  padding: 5rem 0;
+  // padding-top: 2rem;
+  // padding-bottom: 2rem;
+  background-color: rgba($color-gray, 0.1);
+  &__bottom {
+    padding-top: 50px;
+    .copyright {
+      cursor: default;
     }
+  }
 }
 
 .footer-column__title {
-    cursor: default;
+  cursor: default;
 }
 
 @media only screen and (max-width: 579px) {
-    .footer  {
-        &__top{
-            padding: 1rem;
-        }
+  .footer {
+    &__top {
+      padding: 1rem;
     }
+  }
 }
