--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,8 +5,13 @@
   // padding-top: 2rem;
   // padding-bottom: 2rem;
   background-color: rgba($color-gray, 0.1);
+  &__top {
+    .ant-row {
+      margin: 0 !important;
+    }
+  }
   &__bottom {
-    padding-top: 50px;
+    // padding-top: 50px;
     .copyright {
       cursor: default;
     }
