--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,23 @@
-
 body {
-  margin: 0;
-  /* font-family: 'Circular Std Book', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
-    /* font-family: 'Montserrat', sans-serif; */
-      font-family: 'Circular Std Book';
-    /* font-family: 'Circular Std'; */
+    margin: 0;
+    font-family: 'Circular Std Book  ', sans-serif;
+    /* font-family: "Circular Std Book"; */
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-    word-spacing: -.5rem;
-
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /* word-spacing: -0.5rem;   */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  word-spacing: -1.3rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    /* word-spacing: -1.3rem; */
 }
