--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,6 +6,7 @@
   // padding-bottom: 2rem;
   background-color: rgba($color-gray, 0.1);
   &__top {
+    padding: 0 5rem;
     .ant-row {
       margin: 0 !important;
     }
