--- a/src/components/Feedback/components/Feedback-Item/FeedbackItem.scss
+++ b/src/components/Feedback/components/Feedback-Item/FeedbackItem.scss
@@ -22,6 +22,8 @@
       line-height: 0;
       font-family: "Passion One", cursive;
       color: rgba($color-white, 0.6);
+      display: inline-block;
+      transform: matrix(1, 0, 0, -1, -1, -22);
     }
     p::after {
       content: "\201D";
@@ -31,6 +33,7 @@
       bottom: -2px;
       line-height: 0;
       right: 0;
+      display: inline-block;
       color: rgba($color-white, 0.6);
     }
   }
@@ -41,14 +44,17 @@
     &__description {
       font-size: $font-size-heading6;
       text-align: justify;
+      p::before {
+        transform: matrix(1, 0, 0, -1, 0, -22);
+      }
       p::after {
         content: "\201D";
         font-size: 10rem;
         font-family: "Passion One", cursive;
         position: absolute;
-        bottom: -25px;
+        bottom: -15px;
         line-height: 0;
-        right: 15px;
+        right: 0px;
         color: rgba($color-white, 0.6);
       }
     }
