--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
-    margin-top: $header-height;
+    margin-top: 11.9rem;
     min-height: fit-content;
     padding-bottom: .8rem;
     &__img {
