--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -49,6 +49,10 @@
         font-size: $font-size-subtitle1;
         margin: 0;
     }
+
+    h1 {
+        font-weight: 700;
+    }
 }
 
 @media (max-width: 1125px) {
