delete email in banner

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,6 +8,9 @@
     margin-top: 11.9rem;
     min-height: fit-content;
     padding-bottom: .8rem;
+    &__btn {
+        margin-top: 3rem;
+    }
     &__img {
         position: relative;
         img {
