Add Logo Chrome Extension, Fix CSS Description Section

--- a/src/components/AppDownload/AppDownload.scss
+++ b/src/components/AppDownload/AppDownload.scss
@@ -25,8 +25,12 @@
                 .app-store {
                     margin-right: 5px;
                 }
-                .ch-play {
+                .chrome-extension-logo {
                     margin-left: 5px;
+                    img {
+                        width: 200px;
+                        height: 100px;
+                    }
                 }
             }
         }
