--- a/src/components/Description/Description.scss
+++ b/src/components/Description/Description.scss
@@ -10,6 +10,11 @@
     font-weight: bold;
   }
 
+  &__definition {
+    word-spacing: -1.5px;
+    max-width: 500px;
+  }
+
   p {
     max-width: 1250px;
     font-size: 1.8rem;
@@ -19,56 +24,57 @@
 
   &__content-padding {
     color: $color-gray;
-    padding: 5rem 10rem 0 0;
+    padding: 5rem 5rem 0 0;
     font-size: $font-size-heading6;
     cursor: default;
+    max-width: 600px;
   }
 
   &__img {
     position: relative;
 
     img {
-      object-fit: scale-down;
       width: 100%;
-      height: 100%;
+      height: 300px;
+      object-fit: contain;
     }
   }
 }
 
-@media (max-width: 1240px) {
-  .description {
-    &__content-padding {
-      padding: 5rem 5rem 0 0;
-    }
-  }
-}
+// @media (max-width: 1240px) {
+//   .description {
+//     &__content-padding {
+//       padding: 5rem 5rem 0 0;
+//     }
+//   }
+// }
 
-@media (max-width: 1050px) {
-  .description {
-    &__content-padding {
-      padding: 5rem 3rem 0 0;
-    }
-  }
-}
+// @media (max-width: 1050px) {
+//   .description {
+//     &__content-padding {
+//       padding: 5rem 3rem 0 0;
+//     }
+//   }
+// }
 
 @media (max-width: 510px) {
   .description {
     flex-direction: column;
-    .col-6 {
-      width: 80vw;
-    }
-
     &__content-padding {
       padding: 5rem 0;
       text-align: center;
     }
 
+    &__definition {
+      word-spacing: -1.3px;
+    }
+
     &__img {
-      position: relative;
+      width: 80%;
+      margin: auto;
 
       img {
-        width: 80vw;
-        height: 80%;
+        width: 100%;
       }
     }
   }
