--- a/src/components/ButtonLarge/ButtonLarge.scss
+++ b/src/components/ButtonLarge/ButtonLarge.scss
@@ -14,6 +14,7 @@
 
     &:hover {
         background-color: $color-success;
+        color: $color-white !important;
     }
     &:visited, &:focus {
         // background-color: $color-success;
