Revamp sections, update copy for mvp

--- a/src/components/Problem/Problem.scss
+++ b/src/components/Problem/Problem.scss
@@ -1,25 +1,23 @@
 @import "../../sass/index.scss";
 
-.banner {
-  background-color: #e9f8ff;
+.problem {
+  background-color: #e9f8ff85;
   display: flex;
-  justify-content: space-between;
-  margin: auto;
-  margin-top: 11.9rem;
+  justify-content: flex-end;
   min-height: fit-content;
-  padding-top: 7rem;
-  padding-bottom: 13rem;
+  padding-bottom: 0.8rem;
   &__btn {
     margin-top: 3rem;
   }
   &__img {
+    width: 50%;
     position: relative;
     img {
       width: 100%;
       height: 100%;
       background-repeat: no-repeat;
       object-fit: cover;
-      padding: 2rem 8rem;
+      padding: 7rem 6rem;
     }
     video {
       width: 100%;
@@ -27,11 +25,10 @@
     }
   }
 
-  &__center {
-    width: 65%;
+  &__right {
+    width: 50%;
     text-align: center;
-    margin: auto;
-    padding: 1rem 6rem;
+    padding: 5rem 6rem;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -48,6 +45,8 @@
   .description {
     font-size: $font-size-heading5;
     cursor: default;
+    line-height: 2.5rem;
+    padding-bottom: 2rem;
   }
   p {
     font-size: $font-size-subtitle1;
@@ -56,11 +55,12 @@
 
   h1 {
     font-weight: 700;
+    line-height: 4.5rem;
   }
 }
 
 @media (max-width: 1125px) {
-  .banner {
+  .problem {
     &__center {
       padding: 1rem 0rem 1rem 5rem;
     }
@@ -74,7 +74,7 @@
 }
 
 @media (max-width: 994px) {
-  .banner {
+  .problem {
     &__center {
       margin-top: 4rem;
       width: 90%;
@@ -83,7 +83,7 @@
 }
 
 @media (max-width: 895px) {
-  .banner {
+  .problem {
     flex-direction: column;
     &__center {
       display: flex;
