--- a/src/components/Description/Description.scss
+++ b/src/components/Description/Description.scss
@@ -18,13 +18,14 @@
   p {
     max-width: 1250px;
     font-size: 1.8rem;
-    color: $color-gray;
+    // color: $color-gray;
+    color: #000000d1;
     text-align: justify;
   }
 
   &__content-padding {
     color: $color-gray;
-    padding: 5rem 5rem 0 0;
+    padding: 10rem 0 0 5rem;
     font-size: $font-size-heading6;
     cursor: default;
     max-width: 600px;
@@ -32,7 +33,7 @@
 
   &__img {
     position: relative;
-
+    padding-top: 5rem;
     img {
       width: 100%;
       height: 300px;
