--- a/src/components/Problem/Problem.scss
+++ b/src/components/Problem/Problem.scss
@@ -84,32 +84,23 @@
 
 @media (max-width: 895px) {
   .problem {
-    flex-direction: column;
-    &__center {
-      display: flex;
-
-      justify-content: center;
-      align-items: center;
-      padding-left: 0;
-    }
-    &__text-color {
-      font-size: 3.6rem;
-      text-align: center;
-    }
-    .description {
-      font-size: 2.2rem;
-      display: flex;
-      justify-content: center;
-    }
     &__img {
-      position: relative;
       img {
-        width: 100%;
-        height: 30%;
-        // max-height: 30rem;
-        background-repeat: no-repeat;
-        object-fit: cover;
+        height: auto;
       }
+    }
+  }
+}
+
+@media (max-width: 786px) {
+  .problem {
+    flex-direction: column;
+    &__img {
+      width: 100%;
+    }
+    &__right {
+      width: 100%;
+      padding-top: 0;
     }
   }
 }
